[gd_scene load_steps=3 format=3 uid="uid://b317m16llc1hw"]

[ext_resource type="Script" uid="uid://bpiu0cay636rd" path="res://scenes/naming_ui.gd" id="1_4vvxd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jsnb3"]
bg_color = Color(0.8, 0.8, 0.8, 1)

[node name="NamingUI" type="CanvasLayer"]
script = ExtResource("1_4vvxd")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 128.0
offset_bottom = 72.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="Panel" type="Panel" parent="ColorRect"]
layout_mode = 0
offset_left = 440.0
offset_top = 180.0
offset_right = 840.0
offset_bottom = 540.0
theme_override_styles/panel = SubResource("StyleBoxFlat_jsnb3")

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="ColorRect/Panel/VBoxContainer"]
layout_mode = 2
text = "Enter Player Name"

[node name="PlayerNameInput" type="LineEdit" parent="ColorRect/Panel/VBoxContainer"]
layout_mode = 2
placeholder_text = "Player"

[node name="Label2" type="Label" parent="ColorRect/Panel/VBoxContainer"]
layout_mode = 2
text = "Enter Pet Name"

[node name="PetNameInput" type="LineEdit" parent="ColorRect/Panel/VBoxContainer"]
layout_mode = 2
placeholder_text = "Pet"

[node name="ConfirmButton" type="Button" parent="ColorRect/Panel/VBoxContainer"]
layout_mode = 2
text = "Confirm"
